# IBDecay

./: .gitignore  README.md  pyproject.toml
IBDecay/: expectations.py  plots.py  simulations.py  utils.py
docs/: conf.py  index.rst  usage.rst
notebooks/: simulated_data.ipynb
