[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IBDecay"
version = "0.1"
description = "Analyse IBD between distinct populations"
authors = [{name = "Pautet", email = "florence_pautet@eva.mpg.de"}]
license = { file = "LICENCE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy>=2.3",
    "pandas>=2.3",
    "scipy>=1.10",
    "matplotlib>=3.10"
]

[project.optional-dependencies]
simulations = ["msprime>=1.3"]


[project.urls]
"Homepage" = "https://github.com/flopau76/IBDecay"
